--- a/config.ini
+++ b/config.ini
@@ -4,12 +4,14 @@ winx = 1920
 winy = 989
 xpos = 0
 ypos = 0
-posx = 1912
+posx = -8
 posy = -8
 
 [opentypes]
 All files = *.*
 INI files = *.ini
+Java files = *.java
+JS files = *.js
 JSON files = *.json
 MQL files = *.mql
 Python files = *.py
@@ -19,6 +21,8 @@ Text files = *.txt
 [savetypes]
 All files = *.*
 INI files = *.ini
+Java files = *.java
+JS files = *.js
 JSON files = *.json
 MQL files = *.mql
 Python files = *.py
